# K-Means-2025

./: CMakeLists.txt  kmeans.cpp
include/: image_processing.hpp  kmeans.hpp  pixel.hpp
include/utils/: convergence.hpp  distance.hpp
src/: image_processing.cpp  kmeans.cpp  main.cpp
src/utils/: convergence.cpp  distance.cpp
